examples/google-cloud-experiment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-canary
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: demo-app
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-stable
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: demo-app
